welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:22: error: identifier expected but '}' found.
	}
        ^